[gd_scene load_steps=5 format=3 uid="uid://g71eg836tx0w"]

[ext_resource type="Script" uid="uid://b4037j13u017" path="res://Scripts/menu.gd" id="1_1rerr"]
[ext_resource type="Texture2D" uid="uid://bygfwnkygq0ph" path="res://Sprites/crowns.png" id="2_xhh6f"]
[ext_resource type="Texture2D" uid="uid://5bajas5t8e2b" path="res://Sprites/cc.png" id="3_cayip"]
[ext_resource type="LabelSettings" uid="uid://sqr3kmbimgx7" path="res://Sprites/blackFontLabel.tres" id="4_158mb"]

[node name="menu" type="Node2D"]
process_mode = 2
visibility_layer = 3
script = ExtResource("1_1rerr")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_right = 20.5
offset_bottom = 143.0
grow_horizontal = 2

[node name="game_over_menu" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="restart" type="Button" parent="MarginContainer/game_over_menu"]
layout_mode = 2
text = "play"

[node name="name_input" type="LineEdit" parent="MarginContainer/game_over_menu"]
layout_mode = 2
placeholder_text = "Enter your name"

[node name="main_menu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="play" type="Button" parent="MarginContainer/main_menu"]
layout_mode = 2
text = "play"

[node name="exit" type="Button" parent="MarginContainer/main_menu"]
layout_mode = 2
text = "exit"

[node name="high_score" type="TextureButton" parent="MarginContainer/main_menu"]
layout_mode = 2
texture_normal = ExtResource("2_xhh6f")

[node name="credits" type="TextureButton" parent="MarginContainer/main_menu"]
layout_mode = 2
texture_normal = ExtResource("3_cayip")

[node name="high_score_menu" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="high_score_label" type="Label" parent="MarginContainer/high_score_menu"]
layout_mode = 2
text = "High Scores"
label_settings = ExtResource("4_158mb")
horizontal_alignment = 1

[node name="high_score_list" type="VBoxContainer" parent="MarginContainer/high_score_menu"]
layout_mode = 2
alignment = 1

[node name="back" type="Button" parent="MarginContainer/high_score_menu"]
layout_mode = 2
text = "back"

[node name="text_file_menu" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="text_file_label" type="Label" parent="MarginContainer/text_file_menu"]
layout_mode = 2
text = "ASSETS CREDITS"
label_settings = ExtResource("4_158mb")
horizontal_alignment = 1

[node name="text_file_content" type="Label" parent="MarginContainer/text_file_menu"]
layout_mode = 2
label_settings = ExtResource("4_158mb")
horizontal_alignment = 1

[node name="back_from_text_file" type="Button" parent="MarginContainer/text_file_menu"]
layout_mode = 2
text = "back"

[connection signal="pressed" from="MarginContainer/game_over_menu/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/main_menu/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/main_menu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/main_menu/high_score" to="." method="_on_high_score_pressed"]
[connection signal="pressed" from="MarginContainer/main_menu/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/high_score_menu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/text_file_menu/back_from_text_file" to="." method="_on_back_from_text_file_pressed"]
